# test-collector-rust

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: api.rs  input.rs  main.rs  payload.rs  run_env.rs
