[package]
authors = [
  "James Harton <james.harton@alembic.com.au>",
  "Josh Price <josh@alembic.com.au>",
]
categories = ["development-tools::testing"]
description = "Sends the JSON output of `cargo test` and sends it to the Buildkite Test Analytics API"
edition = "2021"
keywords = ["cargo", "test", "buildkite", "analytics"]
license = "MIT"
name = "buildkite-test-collector"
readme = "README.md"
repository = "https://github.com/buildkite/test-collector-rust"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4.0", features = ["json"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies]
rand = "0.8.5"
serial_test = "0.6.0"
