[package]
authors = [
  "James Harton <james.harton@alembic.com.au>",
  "Josh Price <josh@alembic.com.au>",
]
categories = ["development-tools::testing"]
description = "Official Buildkite Test Analytics Collector for Rust"
edition = "2021"
homepage = "https://buildkite.com/test-analytics"
keywords = ["cargo", "test", "buildkite", "analytics"]
license = "MIT"
name = "buildkite-test-collector"
readme = "README.md"
repository = "https://github.com/buildkite/test-collector-rust"
version = "0.1.3"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ureq = {version = "2.9.6", features = ["json"]}
uuid = {version = "1.7.0", features = ["v4"]}

[dev-dependencies]
rand = "0.8.5"
serial_test = "3.0.0"
